5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_1015.log
== TEST (2019-03-30 12:52:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=(int(input("digite o numerox: "))
y=(int(input("digite o numeroy: "))
z=(int(input("digite o numeroz: "))

r=((x+y+z)-(min(x,y,z)-max(x,y,z))
print(min(x,y,z))
print(r)
print(max(x,y,z))
	
-- ERROR:
File "XXXX", line 5
    y=(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:53:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numerox: "))
b=(int(input("digite o numeroy: "))
c=(int(input("digite o numeroz: "))

r=((a+b+c)-(min(a,b,c)-max(a,b,c))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- ERROR:
File "XXXX", line 5
    b=(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:54:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numero a: "))
b=(int(input("digite o numero b: "))
c=(int(input("digite o numero c: "))

r=((a+b+c)-(min(a,b,c)-max(a,b,c))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- ERROR:
File "XXXX", line 5
    b=(int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:54:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numero a: ")))
b=(int(input("digite o numero b: ")))
c=(int(input("digite o numero c: ")))

r=((a+b+c)-(min(a,b,c)-max(a,b,c)))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:55:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numero a: ")))
b=(int(input("digite o numero b: ")))
c=(int(input("digite o numero c: ")))

r=((a+b+c)-(min(a,b,c)-(max(a,b,c))))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- OUTPUT:
-2
20
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:57:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numero a: ")))
b=(int(input("digite o numero b: ")))
c=(int(input("digite o numero c: ")))

r=((a+b+c)-min(a,b,c)-max(a,b,c))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:57:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=(int(input("digite o numero a: ")))
b=(int(input("digite o numero b: ")))
c=(int(input("digite o numero c: ")))

r=((a+b+c)-min(a,b,c)-max(a,b,c))
print(min(a,b,c))
print(r)
print(max(a,b,c))
	
-- EXECUTION TIME:
0.163066
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
